[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/MenuOption.tres" type="DynamicFont" id=1]
[ext_resource path="res://Fonts/MenuHeader.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/PauseMenuTheme.tres" type="Theme" id=3]
[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=4]
[ext_resource path="res://Sounds/tick00.ogg" type="AudioStream" id=5]
[ext_resource path="res://Sounds/tick01.ogg" type="AudioStream" id=6]

[node name="PauseMenu" type="Control"]
pause_mode = 2
margin_right = 1600.0
margin_bottom = 900.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1600.0
margin_bottom = 900.0
custom_constants/margin_right = 500
custom_constants/margin_top = 100
custom_constants/margin_left = 500
custom_constants/margin_bottom = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 500.0
margin_top = 100.0
margin_right = 1100.0
margin_bottom = 800.0
custom_constants/separation = 30
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 217.0
margin_right = 600.0
margin_bottom = 337.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "PAUSE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 367.0
margin_right = 600.0
margin_bottom = 410.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 1 )
text = "Resume"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 440.0
margin_right = 600.0
margin_bottom = 483.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 1 )
text = "Quit"

[node name="ClicSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="HoverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
